[gd_scene load_steps=7 format=3 uid="uid://17o6ijlgpb2i"]

[ext_resource type="Script" path="res://src/ContractUIButtons.gd" id="1_8hwki"]
[ext_resource type="Script" path="res://src/Contract.gd" id="1_xpubj"]
[ext_resource type="Texture2D" uid="uid://w5qjvnhliqfx" path="res://assets/FleetUI/CaptureContract.png" id="3_psnwd"]
[ext_resource type="Texture2D" uid="uid://c5n2r83tcniin" path="res://assets/FleetUI/DifficultyMeter.png" id="4_nqn2n"]
[ext_resource type="Texture2D" uid="uid://hagpn4kodfsx" path="res://assets/FleetUI/DefenseContract.png" id="5_gwik7"]
[ext_resource type="Texture2D" uid="uid://dfuba87tbs20c" path="res://assets/FleetUI/RouteEnemyContract.png" id="6_a6yrx"]

[node name="ContractUi" type="Control"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_8hwki")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -104.0
offset_right = 112.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CaptureContract" type="Button" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Capture Point







"
script = ExtResource("1_xpubj")

[node name="DifficultyLabel" type="Label" parent="MarginContainer/HBoxContainer/CaptureContract"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -50.0
offset_right = 65.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="RewardLabel" type="Label" parent="MarginContainer/HBoxContainer/CaptureContract"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -27.0
offset_right = 65.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="DefendContract" type="Button" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Defend Area







"
script = ExtResource("1_xpubj")
type = 1

[node name="DifficultyLabel" type="Label" parent="MarginContainer/HBoxContainer/DefendContract"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -50.0
offset_right = 65.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="RewardLabel" type="Label" parent="MarginContainer/HBoxContainer/DefendContract"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -27.0
offset_right = 65.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="RouteContract" type="Button" parent="MarginContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "Route Enemy







"
script = ExtResource("1_xpubj")
type = 2

[node name="DifficultyLabel" type="Label" parent="MarginContainer/HBoxContainer/RouteContract"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -50.0
offset_right = 65.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0

[node name="RewardLabel" type="Label" parent="MarginContainer/HBoxContainer/RouteContract"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -65.0
offset_top = -27.0
offset_right = 65.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0

[node name="Capture" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_psnwd")
script = ExtResource("1_xpubj")

[node name="RewardLabel" type="Label" parent="MarginContainer/HBoxContainer/Capture"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -9.0
offset_right = 29.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultyLabel" type="Label" parent="MarginContainer/HBoxContainer/Capture"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -26.0
offset_right = 29.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Capture"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_nqn2n")

[node name="Defend" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("5_gwik7")
script = ExtResource("1_xpubj")

[node name="RewardLabel" type="Label" parent="MarginContainer/HBoxContainer/Defend"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -9.0
offset_right = 29.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultyLabel" type="Label" parent="MarginContainer/HBoxContainer/Defend"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -26.0
offset_right = 29.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Defend"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_nqn2n")

[node name="Route" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
texture_normal = ExtResource("6_a6yrx")
script = ExtResource("1_xpubj")

[node name="RewardLabel" type="Label" parent="MarginContainer/HBoxContainer/Route"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -9.0
offset_right = 29.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="DifficultyLabel" type="Label" parent="MarginContainer/HBoxContainer/Route"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -26.0
offset_right = 29.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Route"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_nqn2n")

[connection signal="pressed" from="MarginContainer/HBoxContainer/CaptureContract" to="." method="_on_capture_contract_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/DefendContract" to="." method="_on_defend_contract_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/RouteContract" to="." method="_on_route_contract_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Capture" to="." method="_on_capture_contract_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Defend" to="." method="_on_defend_contract_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Route" to="." method="_on_route_contract_pressed"]
